// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > renders disabled state 1`] = `
<div>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="flex flex-col gap-2"
    data-disabled="true"
    data-rac=""
  >
    <span
      class="text-size-sm font-medium"
      id="react-aria-:r11:"
    >
      Disabled Select
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r15: react-aria-:r11:"
      class="flex items-center px-3 gap-2 w-fit h-[36px] bg-[rgba(0,17,77,0.05)] rounded-[6px] hover:bg-[rgba(0,17,77,0.1)] focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-bluedot-normal transition-colors data-[pressed]:bg-[rgba(0,17,77,0.1)] disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-[rgba(0,17,77,0.05)]"
      data-disabled="true"
      data-rac=""
      data-react-aria-pressable="true"
      disabled=""
      id="react-aria-:r10:"
      type="button"
    >
      <span
        class="font-medium text-[13px] leading-[22px] text-left text-gray-500"
        data-rac=""
        id="react-aria-:r15:"
      >
        <span
          class="flex-1 font-medium text-[13px] leading-[22px]"
        >
          Cat
        </span>
      </span>
      <svg
        class="size-[14px] opacity-50"
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 5.25L7 8.75L10.5 5.25"
          stroke="#00114D"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.25"
        />
      </svg>
    </button>
  </div>
  <div
    aria-hidden="true"
    data-a11y-ignore="aria-hidden-focus"
    data-react-aria-prevent-focus="true"
    data-testid="hidden-select-container"
    style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
  >
    <label>
      <select
        disabled=""
        tabindex="-1"
      >
        <option />
        <option
          value="cat"
        >
          Cat
        </option>
        <option
          value="dog"
        >
          Dog
        </option>
        <option
          value="bird"
        >
          Bird
        </option>
      </select>
    </label>
  </div>
</div>
`;

exports[`Select > renders with icon 1`] = `
<div>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="flex flex-col gap-2"
    data-rac=""
  >
    <span
      class="text-size-sm font-medium"
      id="react-aria-:rn:"
    >
      User
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:rr: react-aria-:rn:"
      class="flex items-center px-3 gap-2 w-fit h-[36px] bg-[rgba(0,17,77,0.05)] rounded-[6px] hover:bg-[rgba(0,17,77,0.1)] focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-bluedot-normal transition-colors data-[pressed]:bg-[rgba(0,17,77,0.1)] disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-[rgba(0,17,77,0.05)]"
      data-rac=""
      data-react-aria-pressable="true"
      id="react-aria-:rm:"
      tabindex="0"
      type="button"
    >
      <span
        class="size-4 text-bluedot-darker"
      >
        <span>
          👤
        </span>
      </span>
      <span
        class="font-medium text-[13px] leading-[22px] text-left text-bluedot-darker"
        data-placeholder="true"
        data-rac=""
        id="react-aria-:rr:"
      >
        Select an option
      </span>
      <svg
        class="size-[14px]"
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 5.25L7 8.75L10.5 5.25"
          stroke="#00114D"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.25"
        />
      </svg>
    </button>
  </div>
  <div
    aria-hidden="true"
    data-a11y-ignore="aria-hidden-focus"
    data-react-aria-prevent-focus="true"
    data-testid="hidden-select-container"
    style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
  >
    <label>
      <select
        tabindex="-1"
        title=""
      >
        <option />
        <option
          value="cat"
        >
          Cat
        </option>
        <option
          value="dog"
        >
          Dog
        </option>
        <option
          value="bird"
        >
          Bird
        </option>
      </select>
    </label>
  </div>
</div>
`;

exports[`Select > renders with label 1`] = `
<div>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="flex flex-col gap-2"
    data-rac=""
  >
    <span
      class="text-size-sm font-medium"
      id="react-aria-:r3:"
    >
      Pet
    </span>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="flex items-center px-3 gap-2 w-fit h-[36px] bg-[rgba(0,17,77,0.05)] rounded-[6px] hover:bg-[rgba(0,17,77,0.1)] focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-bluedot-normal transition-colors data-[pressed]:bg-[rgba(0,17,77,0.1)] disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-[rgba(0,17,77,0.05)]"
      data-rac=""
      data-react-aria-pressable="true"
      id="react-aria-:r2:"
      tabindex="0"
      type="button"
    >
      <span
        class="font-medium text-[13px] leading-[22px] text-left text-bluedot-darker"
        data-placeholder="true"
        data-rac=""
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <svg
        class="size-[14px]"
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 5.25L7 8.75L10.5 5.25"
          stroke="#00114D"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.25"
        />
      </svg>
    </button>
  </div>
  <div
    aria-hidden="true"
    data-a11y-ignore="aria-hidden-focus"
    data-react-aria-prevent-focus="true"
    data-testid="hidden-select-container"
    style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
  >
    <label>
      <select
        tabindex="-1"
        title=""
      >
        <option />
        <option
          value="cat"
        >
          Cat
        </option>
        <option
          value="dog"
        >
          Dog
        </option>
        <option
          value="bird"
        >
          Bird
        </option>
      </select>
    </label>
  </div>
</div>
`;

exports[`Select > shows placeholder when no value selected 1`] = `
<div>
  <template
    data-react-aria-hidden="true"
  />
  <div
    class="flex flex-col gap-2"
    data-rac=""
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:rh:"
      class="flex items-center px-3 gap-2 w-fit h-[36px] bg-[rgba(0,17,77,0.05)] rounded-[6px] hover:bg-[rgba(0,17,77,0.1)] focus-visible:outline-2 focus-visible:-outline-offset-2 focus-visible:outline-bluedot-normal transition-colors data-[pressed]:bg-[rgba(0,17,77,0.1)] disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-[rgba(0,17,77,0.05)]"
      data-rac=""
      data-react-aria-pressable="true"
      id="react-aria-:rc:"
      tabindex="0"
      type="button"
    >
      <span
        class="font-medium text-[13px] leading-[22px] text-left text-bluedot-darker"
        data-placeholder="true"
        data-rac=""
        id="react-aria-:rh:"
      >
        Choose a pet
      </span>
      <svg
        class="size-[14px]"
        fill="none"
        height="14"
        viewBox="0 0 14 14"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3.5 5.25L7 8.75L10.5 5.25"
          stroke="#00114D"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="1.25"
        />
      </svg>
    </button>
  </div>
  <div
    aria-hidden="true"
    data-a11y-ignore="aria-hidden-focus"
    data-react-aria-prevent-focus="true"
    data-testid="hidden-select-container"
    style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
  >
    <label>
      <select
        tabindex="-1"
        title=""
      >
        <option />
        <option
          value="cat"
        >
          Cat
        </option>
        <option
          value="dog"
        >
          Dog
        </option>
        <option
          value="bird"
        >
          Bird
        </option>
      </select>
    </label>
  </div>
</div>
`;
